# hdas

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  hdas@.service
Releases/hdas-aur/: PKGBUILD
Releases/hdas-git/: PKGBUILD  hdas.install
bpf/: monitor.bpf.c
src/: cleanup.rs  config.rs  db.rs  main.rs  monitor.rs  pkgmgr.rs  query.rs
