[package]
name = "hdas"
version = "1.2.0"
edition = "2021"

[dependencies]
libbpf-rs = "0.24"
libbpf-cargo = "0.24"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
nix = { version = "0.29", features = ["process", "user"] }
dirs = "5.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"

[build-dependencies]
libbpf-cargo = "0.24"
