[package]
name = "hdas"
version = "1.3.1"
edition = "2021"

[dependencies]
libbpf-rs = "0.24"
libbpf-cargo = "0.24"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
nix = { version = "0.29", features = ["process", "user"] }
dirs = "5.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
serde_json = "1.0"
owo-colors = "4"
clap_complete = "4.5"
clap_mangen = "0.2"

[build-dependencies]
libbpf-cargo = "0.24"
